--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
 	"website_url": "https://github.com/ReturnsAPI/ReturnsAPI/wiki",
 	"description": "description",
 	"dependencies": [
-		"ReturnOfModding-ReturnOfModding-1.0.58"
+		"ReturnOfModding-ReturnOfModding-1.0.58",
+		"LuaENVY-ENVY-1.2.0"
 	]
 }
