--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -11,4 +11,5 @@ jobs:
 
         steps:
             - name: Run parser
-              run: python docs/main.py
+            #   run: python docs/main.py
+              run: ls
