--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - uses: actions/checkout@v4
             - name: Run parser
-            #   run: python docs/main.py
-              run: ls -R
+              run: python docs/main.py
+            #   run: ls -R
