--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -7,10 +7,11 @@ on:
 
 jobs:
     generate:
-        runs-on: windows-latest
+        runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout repo
+              uses: actions/checkout@v4
+
             - name: Run parser
               run: python docs/main.py
-            #   run: ls -R
