--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Give directory perms
-              uses: chmod docs/out u+rwx
+              run: chmod docs/out u+rwx
 
             - name: Run parser
               run: python docs/main.py
