--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -13,6 +13,9 @@ jobs:
             - name: Checkout repo
               uses: actions/checkout@v4
 
+            - name: What is in here
+              run: ls -R
+
             - name: Give directory perms
               run: chmod u+rwx docs/out
 
