--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -12,6 +12,8 @@ jobs:
         steps:
             - name: Checkout repo
               uses: actions/checkout@v4
+              with:
+                token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Run parser
               run: python docs/main.py
