--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -20,9 +20,8 @@ jobs:
 
             - name: Push changes to repo
               run: |
-                git config --global user.name "github-actions[bot]"
-                git config --global user.email "github-actions[bot]@users.noreply.github.com"
-                
+                git config user.name "github-actions"
+                git config user.email "github-actions@github.com"
                 git add docs/out
                 git commit -m "Update docs"
                 git push
