--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -13,15 +13,15 @@ jobs:
             - name: Checkout repo
               uses: actions/checkout@v4
               with:
-                token: ${{ secrets.GITHUB_TOKEN }} 
+                token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Run parser
               run: python docs/main.py
 
-            - name: Push changes to repo
-              run: |
-                git config user.name "github-actions"
-                git config user.email "github-actions@github.com"
-                git add docs/out
-                git commit -m "Update docs"
-                git push
+            # - name: Push changes to repo
+            #   run: |
+            #     git config user.name "github-actions"
+            #     git config user.email "github-actions@github.com"
+            #     git add docs/out
+            #     git commit -m "Update docs"
+            #     git push
