--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -32,6 +32,6 @@ jobs:
               run: |
                 git config user.name "github-actions"
                 git config user.email "github-actions@github.com"
-                git add docs/out
+                git add .
                 git commit -m "Update docs"
                 git push
