--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -34,5 +34,5 @@ jobs:
                 git config user.name "github-actions"
                 git config user.email "github-actions@github.com"
                 git add .
-                git commit -m "Update docs"
+                git commit -m "Update docs" || echo "No docs changes"
                 git push
